--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,11 @@ hr {
     width: 50px;
     height: 50px;
 }
+.logo-box {
+    background:url('../img/js-logo.png');
+    width: 300px;
+    height: 50px;
+}
 .no-border {
     border: 0;
     height: auto;
@@ -137,3 +142,21 @@ table.display {
     height: auto;
     border: 0;
 }
+.testbutton {
+    font-family: arial;
+    color: #14396A !important;
+    font-size: 14px;
+    text-shadow: 1px 1px 0px #7CACDE;
+    box-shadow: 2px 4px 1px #BEE2F9;
+    padding: 15px 34px;
+    border-radius: 10px;
+    border: 2px solid #3866A3;
+    background: #63B8EE;
+    background: linear-gradient(to top, #63B8EE, #468CCF);
+  }
+  .testbutton:hover {
+    color: #14396A !important;
+    background: #468CCF;
+    background: linear-gradient(to top, #468CCF, #63B8EE);
+  }
+  
